# player

./: .editorconfig  .gitattributes  .gitignore  .prettierignore  .stylelintrc.json  CNAME  CONTRIBUTING.md  LICENSE  MANIFEST  Makefile  README.md  eslint.config.mjs  index.html  package.json  pwa-assets.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml  pages.yml
.husky/: pre-commit  pre-push
docs/: export-plan.md  live-beacon.md  manifest.md
public/: default.wid
schemas/: example-project.json  project.schema.json  waldiez-manifest.schema.json
scripts/: check-manifest-compat.ts  opencv_stream.py  ship_snapshot.sh  validate-manifest.ts  ws_beacon_test.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: effects.rs  media.rs  mod.rs  mpv.rs  project.rs  render.rs  ytdlp.rs
src-tauri/src/effects/: mod.rs
src-tauri/src/media/: analyzer.rs  info.rs  mod.rs  waveform.rs
src-tauri/src/project/: manager.rs  mod.rs  types.rs
src-tauri/src/render/: mod.rs
src/components/: index.d.ts  index.ts
src/components/effects/: EffectsPanel.d.ts  EffectsPanel.tsx  index.ts
src/hooks/: useAudioChain.ts  useMediaQuery.ts  useMediaStream.ts  useMoodPersistence.ts  useStreamAnalyser.ts  useTauriMpv.ts
src/lib/: beaconSettings.ts  beaconTransport.ts  deviceSource.ts  mediaSource.ts  moodDefaults.ts  moodDrawers.ts  pipedPlayer.ts  streamTargets.ts  tauriPlayer.ts  utils.d.ts  utils.ts
src/stores/: index.ts  playerStore.d.ts  playerStore.ts
src/types/: index.ts  modes.test.ts  modes.ts  mood.ts  player.d.ts  player.ts
(+25 files in other folders)
