[package]
name = "waldiez-player"
version = "0.1.0"
description = "A video player and editor with an impressive UI"
authors = ["Lazaros Toumanidis <laztoum@waldiez.io>"]
license = "Apache-2.0"
repository = "https://github.com/waldiez/player"
edition = "2021"
rust-version = "1.77"

[lib]
name = "waldiez_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.9.1", features = ["macos-private-api", "native-tls"] }
tauri-plugin-shell = "2.3.4"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"

# Async runtime
tokio = { version = "1.49.0", features = ["full"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Error handling
thiserror = "2.0.18"
anyhow = "1"

# FFmpeg bindings
ffmpeg-next = "8"

# Image processing
image = "0.25.9"

# Logging
log = "0.4.29"
env_logger = "0.11"

# UUID generation
uuid = { version = "1.20.0", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4.43", features = ["serde"] }

# Path handling
dirs = "6"

# Parallel processing
rayon = "1.11.0"

# Channel for async communication
crossbeam-channel = "0.5.15"

# Lazy static initialization
lazy_static = "1.5.0"
base64 = "0.22.1"
tempfile = "3.24.0"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
